# totp-qr

./: Cargo.toml  Dockerfile  LICENSE  README.md  justfile
scripts/: aes.sh  mk-totp-func.sh
src/: main.rs  test.rs  totp_token.rs
src/otpauth_migration/: mod.rs
