[package]
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
description = "Display the optauth URI and TOTP token from QR images, URI, or otpauth-migration link"
repository = "https://github.com/dfarnham/totp-qr"
keywords = ["authentication", "2fa", "totp", "hmac", "otp"]
categories = ["command-line-utilities"]
name = "totp-qr"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base32 = "0.4"
base64 = "0.21"
clap = { version = "4", features = ["cargo", "derive"] }
file-format = "0.21"
hmac = "0.12"
image = "0.24"
protobuf = "2.28.0"
rqrr = "0.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
urlencoding = "2"
